samples/_failures_safe/1761608671_4522ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cbc013c5.c: In function ‘main’:
./samples/SAFE/__tmp_cbc013c5.c:172:20: error: missing terminating " character
  172 |             printf(" '%
      |                    ^~~~
./samples/SAFE/__tmp_cbc013c5.c:172:13: error: expected expression at end of input
  172 |             printf(" '%
      |             ^~~~~~
./samples/SAFE/__tmp_cbc013c5.c:172:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cbc013c5.c:172:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cbc013c5.c:172:13: error: expected declaration or statement at end of input
